--- a/telas/lista_cliente.html
+++ b/telas/lista_cliente.html
@@ -36,7 +36,7 @@
                 </tr>
             </thead>
             <tbody data-tabela>
-                
+
             </tbody>
         </table>
         <div class="modal-container modal--fechado">
@@ -55,7 +55,7 @@
     </main>
 </body> 
 
-<script src="../service/cliente-service.js"></script>
+<script type="module" src="../controller/listaClientes-controller.js"></script>
 
 </html>
 
