--- a/telas/edita_cliente.html
+++ b/telas/edita_cliente.html
@@ -45,6 +45,6 @@
             </form>
         </section>
     </main>
-    
 </body>
+<script type="module" src="../controller/atualizaCliente-controller.js"></script>
 </html>
